Test gtest/AsyncLogGtest.java fails after JDK-8349755

XMLWordPrintable

    • 25
    • b12

      The LogConfigurationTest gtest enables all log tags, which means that it enables the special "deathtest" flag which is only intended to be used to test the recursive logging traps in UL. As a result we encounter the shouldNotReachHere():

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/03ecc23a-edd5-4bb5-a333-4ff8ea07fd7c-S1484/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4ac9bf9b-7573-4582-8c4a-84ef6ec82eeb/runs/1f6c593f-38dd-4f20-87fa-4503f6c6aef4/workspace/open/src/hotspot/share/logging/logAsyncWriter.cpp:120), pid=3560164, tid=3560181
      # Error: ShouldNotReachHere()
      #
      # JRE version: OpenJDK Runtime Environment (25.0+11) (fastdebug build 25-ea+11-1142)
      # Java VM: OpenJDK 64-Bit Server VM (fastdebug 25-ea+11-1142, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x178155a] AsyncLogWriter::is_enqueue_allowed() [clone .part.0]+0x1a
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/03ecc23a-edd5-4bb5-a333-4ff8ea07fd7c-S1439/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/44e29fb0-dffc-4098-9b61-b8869e1c1564/runs/179e8be6-b832-4676-bdd3-0756670f7fc5/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_misc/scratch/3/core.3560164)
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- S U M M A R Y ------------

      Command Line: -XX:+ExecutingUnitTests -Xlog:async

      Host: AMD EPYC 7J13 64-Core Processor,
      [error occurred during error reporting (printing summary machine and OS info), id 0xe0000000, Internal Error (/opt/mach5/mesos/work_dir/slaves/03ecc23a-edd5-4bb5-a333-4ff8ea07fd7c-S1484/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4ac9bf9b-7573-4582-8c4a-84ef6ec82eeb/runs/1f6c593f-38dd-4f20-87fa-4503f6c6aef4/workspace/open/src/hotspot/share/logging/logAsyncWriter.cpp:120)]
      Time: Mon Feb 17 23:46:35 2025 UTC elapsed time: 0.370224 seconds (0d 0h 0m 0s)

      --------------- T H R E A D ---------------

      Current thread (0x00005628877bef90): JavaThread "C1 CompilerThread0" daemon [_thread_in_vm, id=3560181, stack(0x00007f8e5f7f9000,0x00007f8e5f8f9000) (1024K)]


      Current CompileTask:
      C1:370 47 3 java.util.concurrent.ConcurrentHashMap::addCount (280 bytes)

      Stack: [0x00007f8e5f7f9000,0x00007f8e5f8f9000], sp=0x00007f8e5f8f5a70, free space=1010k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x178155a] AsyncLogWriter::is_enqueue_allowed() [clone .part.0]+0x1a (logAsyncWriter.cpp:120)
      V [libjvm.so+0x17822ef] AsyncLogWriter::enqueue(LogFileStreamOutput&, LogDecorations const&, char const*)+0x16f (logAsyncWriter.cpp:149)
      V [libjvm.so+0x178800d] LogFileOutput::write(LogDecorations const&, char const*)+0x2d (logFileOutput.cpp:295)
      V [libjvm.so+0x178f47f] LogTagSet::log(LogLevel::type, char const*)+0x9f (logTagSet.cpp:89)
      V [libjvm.so+0x178f747] LogTagSet::vwrite(LogLevel::type, char const*, __va_list_tag*)+0x127 (logTagSet.cpp:154)
      V [libjvm.so+0x17836ca] void LogImpl<(LogTag::type)35, (LogTag::type)0, (LogTag::type)0, (LogTag::type)0, (LogTag::type)0, (LogTag::type)0>::write<(LogLevel::type)2>(char const*, ...)+0x9a (log.hpp:148)
      V [libjvm.so+0x1782234] AsyncLogWriter::enqueue(LogFileStreamOutput&, LogDecorations const&, char const*)+0xb4 (logAsyncWriter.cpp:145)
      V [libjvm.so+0x178800d] LogFileOutput::write(LogDecorations const&, char const*)+0x2d (logFileOutput.cpp:295)
      V [libjvm.so+0x178f47f] LogTagSet::log(LogLevel::type, char const*)+0x9f (logTagSet.cpp:89)
      V [libjvm.so+0x178f747] LogTagSet::vwrite(LogLevel::type, char const*, __va_list_tag*)+0x127 (logTagSet.cpp:154)
      V [libjvm.so+0x5eeeb0] LogTargetHandle::print(char const*, ...)+0xa0 (logHandle.hpp:97)
      V [libjvm.so+0x178e964] LogStreamImpl<LogTargetHandle>::write(char const*, unsigned long)+0x204 (logStream.cpp:120)
      V [libjvm.so+0x176c108] trace_method_resolution(char const*, Klass*, Klass*, Method*, bool, int)+0x218 (linkResolver.cpp:857)
      V [libjvm.so+0x17742d3] LinkResolver::linktime_resolve_virtual_method(LinkInfo const&, JavaThread*)+0xb3 (linkResolver.cpp:1390)
      V [libjvm.so+0x177456b] LinkResolver::linktime_resolve_virtual_method_or_null(LinkInfo const&)+0x2b (linkResolver.cpp:1626)
      V [libjvm.so+0xdd7291] ciEnv::lookup_method(ciInstanceKlass*, ciKlass*, Symbol*, Symbol*, Bytecodes::Code, constantTag)+0x1c1 (ciEnv.cpp:800)
      V [libjvm.so+0xdd761c] ciEnv::get_method_by_index_impl(constantPoolHandle const&, int, Bytecodes::Code, ciInstanceKlass*)+0x1cc (ciEnv.cpp:870)
      V [libjvm.so+0xe3ea41] ciBytecodeStream::get_method(bool&, ciSignature**)+0x121 (ciStreams.cpp:371)
      V [libjvm.so+0xc4b573] GraphBuilder::invoke(Bytecodes::Code)+0x33 (c1_GraphBuilder.cpp:1933)
      V [libjvm.so+0xc4d2ff] GraphBuilder::iterate_bytecodes_for_block(int)+0xaff (c1_GraphBuilder.cpp:2974)
      V [libjvm.so+0xc50781] GraphBuilder::iterate_all_blocks(bool)+0x91 (c1_GraphBuilder.cpp:3057)
      V [libjvm.so+0xc51fe1] GraphBuilder::GraphBuilder(Compilation*, IRScope*)+0x7b1 (c1_GraphBuilder.cpp:3427)
      V [libjvm.so+0xc60ba2] IRScope::IRScope(Compilation*, IRScope*, int, ciMethod*, int, bool)+0x322 (c1_IR.cpp:127)
      V [libjvm.so+0xc60db8] IR::IR(Compilation*, ciMethod*, int)+0xa8 (c1_IR.cpp:273)
      V [libjvm.so+0xc28f13] Compilation::build_hir() [clone .part.0]+0x113 (c1_Compilation.cpp:158)
      V [libjvm.so+0xc2b078] Compilation::compile_java_method()+0x458 (c1_Compilation.cpp:384)
      V [libjvm.so+0xc2b98e] Compilation::compile_method()+0x21e (c1_Compilation.cpp:477)
      V [libjvm.so+0xc2c0a0] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, bool, DirectiveSet*)+0x300 (c1_Compilation.cpp:607)
      V [libjvm.so+0xc2dc5e] Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0xae (c1_Compiler.cpp:261)
      V [libjvm.so+0xf15548] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x928 (compileBroker.cpp:2331)
      V [libjvm.so+0xf16288] CompileBroker::compiler_thread_loop()+0x528 (compileBroker.cpp:1975)
      V [libjvm.so+0x13d191e] JavaThread::thread_main_inner()+0xee (javaThread.cpp:776)
      V [libjvm.so+0x1d24b16] Thread::call_run()+0xb6 (thread.cpp:231)
      V [libjvm.so+0x19fd1d8] thread_native_entry(Thread*)+0x128 (os_linux.cpp:877)

      This only happens in tier6 where we run this test with async logging

            Assignee:
            Johan Sjölen
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: