8350214: Test gtest/AsyncLogGtest.java fails after JDK-8349755

Reviewed-by: aboldtch, dholmes